--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,7 +64,6 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
@@ -74,239 +73,134 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cl_top_appbar"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/cl_item_1"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/item_1_layout">
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/item_1_layout"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:padding="15dp"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/line">-->
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/iv_item_home_thumbnail_1"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:elevation="0dp"
-            app:cardCornerRadius="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+<!--        <androidx.cardview.widget.CardView-->
+<!--            android:id="@+id/iv_item_home_thumbnail_2"-->
+<!--            android:layout_width="65dp"-->
+<!--            android:layout_height="65dp"-->
+<!--            android:elevation="0dp"-->
+<!--            app:cardCornerRadius="15dp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent">-->
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/carrot_image" />
+<!--            <ImageView-->
+<!--                android:id="@+id/user_thumbnail"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="match_parent"-->
+<!--                android:scaleType="fitXY"-->
+<!--                android:src="@drawable/carrot_image" />-->
 
-        </androidx.cardview.widget.CardView>
-
-
-        <LinearLayout
-            android:id="@+id/tv_item_home_contents_1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical"
-            app:layout_constraintStart_toEndOf="@+id/iv_item_home_thumbnail_1"
-            app:layout_constraintTop_toTopOf="@+id/iv_item_home_thumbnail_1">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="거래하실분 구합니다"
-                android:textColor="@color/black"
-                android:textSize="16dp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="서울특별시 광진구 화양동"
-                android:textColor="@color/gray"
-                android:textSize="15dp"
-                tools:ignore="TextSizeCheck" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10,000원"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                android:textColor="@color/gray"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/ll_item_home_comment_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="@+id/ll_item_home_like_1"
-            app:layout_constraintEnd_toStartOf="@+id/ll_item_home_like_1">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:src="@drawable/ic_home_item_comment"
-                android:adjustViewBounds="true">
-
-            </ImageView>
-
-            <TextView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:text="  1"
-                android:textSize="17dp">
-
-            </TextView>
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@drawable/ic_home_item_like"
-                android:adjustViewBounds="true">
-
-            </ImageView>
-
-            <TextView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:text="  1"
-                android:textSize="17dp">
-
-            </TextView>
+<!--        </androidx.cardview.widget.CardView>-->
 
 
-        </LinearLayout>
+<!--        <LinearLayout-->
+<!--            android:id="@+id/tv_item_home_contents_2"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginStart="15dp"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:orientation="vertical"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/iv_item_home_thumbnail_2"-->
+<!--            app:layout_constraintTop_toTopOf="@+id/iv_item_home_thumbnail_2">-->
 
-        <LinearLayout
-            android:id="@id/ll_item_home_like_1"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+<!--            <TextView-->
+<!--                android:id="@+id/tv_wanna_trade"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:ellipsize="end"-->
+<!--                android:maxLines="2"-->
+<!--                android:text="거래하실분 구합니다"-->
+<!--                android:textColor="@color/black"-->
+<!--                android:textSize="15dp" />-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--            <TextView-->
+<!--                android:id="@+id/tv_user_residence"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="서울특별시 광진구 화양동"-->
+<!--                android:textColor="@color/gray"-->
+<!--                android:textSize="15dp" />-->
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/item_1_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:padding="15dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cl_top_appbar">
+<!--            <TextView-->
+<!--                android:id="@+id/tv_price"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="10,000원"-->
+<!--                android:textSize="15dp"-->
+<!--                android:textStyle="bold"-->
+<!--                android:textColor="@color/dark_gray"/>-->
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/iv_item_home_thumbnail_2"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:elevation="0dp"
-            app:cardCornerRadius="15dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+<!--        </LinearLayout>-->
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/carrot_image" />
+<!--        <LinearLayout-->
+<!--            android:id="@+id/ll_item_home_like_2"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:visibility="visible"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent">-->
 
-        </androidx.cardview.widget.CardView>
+<!--            <ImageView-->
+<!--                android:layout_width="15dp"-->
+<!--                android:layout_height="15dp"-->
+<!--                android:adjustViewBounds="true"-->
+<!--                android:src="@drawable/ic_home_item_comment">-->
 
+<!--            </ImageView>-->
 
-        <LinearLayout
-            android:id="@+id/tv_item_home_contents_2"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="5dp"
-            android:orientation="vertical"
-            app:layout_constraintStart_toEndOf="@+id/iv_item_home_thumbnail_2"
-            app:layout_constraintTop_toTopOf="@+id/iv_item_home_thumbnail_2">
+<!--            <TextView-->
+<!--                android:id="@+id/tv_buyer_comment"-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:text="  1"-->
+<!--                android:textSize="17dp">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:text="거래하실분 구합니다"
-                android:textColor="@color/black"
-                android:textSize="16dp" />
+<!--            </TextView>-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="서울특별시 광진구 화양동"
-                android:textColor="@color/gray"
-                android:textSize="15dp" />
+<!--            <ImageView-->
+<!--                android:id="@+id/item_iv"-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:adjustViewBounds="true"-->
+<!--                android:src="@drawable/ic_home_item_like">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="10,000원"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                android:textColor="@color/dark_gray"/>
+<!--            </ImageView>-->
 
-        </LinearLayout>
+<!--            <TextView-->
+<!--                android:id="@+id/tv_user_like"-->
+<!--                android:layout_width="25dp"-->
+<!--                android:layout_height="25dp"-->
+<!--                android:text=" 1"-->
+<!--                android:textSize="15dp">-->
 
-        <LinearLayout
-            android:id="@+id/ll_item_home_like_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <ImageView
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ic_home_item_comment">
-
-            </ImageView>
-
-            <TextView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:text="  1"
-                android:textSize="17dp">
-
-            </TextView>
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:adjustViewBounds="true"
-                android:src="@drawable/ic_home_item_like">
-
-            </ImageView>
-
-            <TextView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:text="  1"
-                android:textSize="17dp">
-
-            </TextView>
+<!--            </TextView>-->
 
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/trade_user_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/line"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp"
+        tools:listitem="@layout/item_home_product" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
