--- a/app/src/main/res/layout/activity_alert_info.xml
+++ b/app/src/main/res/layout/activity_alert_info.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="15dp">
+        android:padding="12dp">
         <TextView
             android:id="@+id/tv_delete"
             android:layout_width="wrap_content"
@@ -21,14 +21,14 @@
             android:text="편집"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="15sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
         <ImageView
             android:id="@+id/back_button_alert"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginTop="7dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -37,7 +37,7 @@
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:text="알림"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@id/back_button_alert"
             app:layout_constraintTop_toTopOf="parent"
@@ -45,205 +45,27 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/alert_keyword"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/alert_word_tb"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/cl_top_appbar">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/activity_alert"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toStartOf="@+id/keyword_alert"
-            app:layout_constraintStart_toStartOf="@id/alert_keyword"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="15dp"
-                android:text="활동 알림"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <View
-                android:id="@+id/line_black"
-                android:layout_width="200dp"
-                android:layout_height="3dp"
-                android:background="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:id="@+id/keyword_alert"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/alert_keyword"
-            app:layout_constraintStart_toEndOf="@+id/activity_alert">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="키워드 알림"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:textColor="@color/gray"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="60dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
-
-            <View
-                android:id="@+id/line_gray"
-                android:layout_width="200dp"
-                android:layout_height="3dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:background="@color/gray"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/alert_menu"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/alert_keyword"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="15dp">
+        app:layout_constraintTop_toBottomOf="@id/cl_top_appbar"
+        app:tabIndicatorAnimationMode="linear"
+        app:tabIndicatorColor="@color/black"
+        app:tabIndicatorFullWidth="true"
+        app:tabRippleColor="@color/gray"
+        app:tabTextColor="@color/black"/>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/alert_character"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginTop="20dp"
-            android:elevation="0dp"
-            app:cardCornerRadius="30dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/carrot_alert"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/carrot_image"/>
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:orientation="vertical"
-            android:layout_marginTop="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/alert_character"
-            app:layout_constraintTop_toTopOf="parent">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:layout_marginStart="8dp"
-                android:text="지금 새로워진 당근을 만나보세요!"
-                android:textSize="18dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:text="장형준님, 새로워진 당근의 로고를 소개할게요!"
-                android:textSize="13dp"
-                android:textColor="@color/dark_gray"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:text="4일 전"
-                android:textSize="12dp"
-                android:textColor="@color/gray"/>
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/alert_list_vp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/alert_word_tb">
+    </androidx.viewpager2.widget.ViewPager2>
 
 
-        </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/alert_menu_2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/alert_menu"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="15dp">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/alert_character_2"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginTop="20dp"
-            android:elevation="0dp"
-            app:cardCornerRadius="30dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/carrot_alert_2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="fitXY"
-                android:src="@drawable/carrot_image"/>
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/alert_character_2"
-            app:layout_constraintTop_toTopOf="parent">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:layout_marginStart="8dp"
-                android:text="나눔의 날 그리운 소식 전하기"
-                android:textSize="18dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:text="장형준님께 소중한 나눔의 추억을 전해드릴게요.."
-                android:textSize="13dp"
-                android:textColor="@color/dark_gray"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="2"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
-                android:text="6일 전"
-                android:textSize="12dp"
-                android:textColor="@color/gray"/>
-
-
-        </LinearLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
