--- a/app/src/main/res/layout/activity_stuff_info.xml
+++ b/app/src/main/res/layout/activity_stuff_info.xml
@@ -13,43 +13,30 @@
         android:layout_height="50dp"
         android:background="@null">
         <ImageView
-            android:id="@+id/back_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/iv_back_button"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             android:src="@drawable/iv_back_button"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/computer_layout"
+        android:layout_width="0dp"
+        android:layout_height="200dp"
         app:layout_constraintTop_toBottomOf="@id/appbar"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            app:layout_constraintTop_toBottomOf="@id/computer_layout"
             android:id="@+id/user_interface"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/computer_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-                <ImageView
-                    android:id="@+id/iv_computer"
-                    android:layout_width="match_parent"
-                    android:layout_height="320dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@drawable/example_computer" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -59,21 +46,21 @@
                 android:padding="15dp"
                 app:layout_constraintEnd_toStartOf="@+id/user_manner_degree"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/computer_layout">
-
+                app:layout_constraintTop_toBottomOf="@id/computer_layout"
+                tools:ignore="NotSibling">
                 <TextView
                     android:id="@+id/tv_user_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toEndOf="@id/iv_profile"
                     app:layout_constraintTop_toTopOf="@+id/user_profile"
-                    android:layout_marginStart="13dp"
+                    android:layout_marginStart="10dp"
                     android:text="장형준"
-                    android:textSize="18dp" />
+                    android:textSize="12dp" />
                 <ImageView
                     android:id="@+id/iv_profile"
-                    android:layout_width="56dp"
-                    android:layout_height="59dp"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/user_profile"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -82,10 +69,10 @@
                     android:id="@+id/tv_location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="14dp"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="8dp"
                     android:text="화양동"
-                    android:textSize="17dp"
+                    android:textSize="9dp"
                     app:layout_constraintStart_toEndOf="@+id/iv_profile"
                     app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />
 
@@ -96,13 +83,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="15dp"
-                app:layout_constraintEnd_toEndOf="@id/computer_layout"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/user_profile"
-                app:layout_constraintTop_toBottomOf="@+id/computer_layout">
+                app:layout_constraintTop_toBottomOf="@+id/computer_layout"
+                tools:ignore="NotSibling">
                 <ImageView
                     android:id="@+id/user_manner_face"
-                    android:layout_width="44dp"
-                    android:layout_height="45dp"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_marginEnd="14dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
@@ -118,13 +106,13 @@
                     app:layout_constraintEnd_toStartOf="@+id/user_manner_face"
                     android:layout_marginEnd="14dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:textSize="18dp" />
+                    android:textSize="15dp" />
 
 
                 <ImageView
                     android:id="@+id/celcius_graph"
-                    android:layout_width="80dp"
-                    android:layout_height="15dp"
+                    android:layout_width="85dp"
+                    android:layout_height="8dp"
                     app:layout_constraintEnd_toStartOf="@+id/user_manner_face"
                     app:layout_constraintTop_toBottomOf="@+id/celcius_degree"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -142,11 +130,21 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:padding="15dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/line">
+                <TextView
+                    android:id="@+id/trade_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="노트북 컴퓨터"
+                    android:textSize="15dp"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/tv_information"/>
 
                 <TextView
                     android:id="@+id/tv_information"
@@ -154,9 +152,10 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/trade_title"
+                    android:layout_marginTop="30dp"
                     android:text="[풀옵션으로 구동 가능합니다.](cpu: i9-13900K)\n\n 그래픽카드: RTX 4090TI\n 램: 삼성 DDR% 32GB\n 메인보드: 프라임 b365M-k \n ssd: sk hynix p361 2TB\n 파워: 700W 정격\n 거의 새거나 다름 없습니다. 웬만한 게임\n 풀옵션으로 구동 가능합니다."
-                    android:textSize="20dp"
+                    android:textSize="12dp"
                     android:textStyle="bold" />
                 <TextView
                     android:id="@+id/tv_information_plus"
@@ -167,18 +166,13 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_information"
                     android:text="[풀옵션으로 구동 가능합니다.](cpu: i9-13900K)\n\n 그래픽카드: RTX 4090TI\n 램: 삼성 DDR% 32GB\n 메인보드: 프라임 b365M-k \n ssd: sk hynix p361 2TB\n 파워: 700W 정격\n 거의 새거나 다름 없습니다. 웬만한 게임\n 풀옵션으로 구동 가능합니다."
-                    android:textSize="20dp"
+                    android:textSize="12dp"
                     android:textStyle="bold" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    </ScrollView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
